<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Books</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Books</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_update_book_failed">Error with updating book</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="section_overview">Overview</string>
    <string name="section_supplier">Supplier</string>
    <string name="hint_book_name">Name (required)</string>
    <string name="hint_book_price">Price (required)</string>
    <string name="hint_book_quantity">Quantity</string>
    <string name="hint_book_supplier_name">Supplier Name (required)</string>
    <string name="hint_book_supplier_phone_number">Supplier Phone Number (required)</string>
    <string name="catalog_book_sold">This book has been sold</string>
    <string name="catalog_book_not_available">This book is not available anymore</string>

    <!-- List items buttons text [CHAR LIMIT=10] -->
    <string name="sale_button_text">Sale</string>
    <string name="increase_quantity_button_text">+</string>
    <string name="decrease_quantity_button_text">-</string>
    <string name="order_from_supplier_button_text">Order</string>
    <string name="delete_button_text">Delete Book</string>

    <!-- Required values [CHAR LIMIT=50] -->
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="price_cannot_be_empty">Price cannot be empty</string>
    <string name="supplier_name_cannot_be_empty">Supplier name cannot be empty</string>
    <string name="supplier_phone_number_cannot_be_empty">Supplier phone number cannot be empty</string>

</resources>
